# META-ML

./: PROJECT_EXPLANATION.md  README.md  app.py  ml_oracle.db  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: config.py  database.py
src/api/: auth.py  main.py
src/collection/: collector.py  discovery.py
src/modeling/: explainability.py  oracle.py  roadmap.py
src/processing/: features.py  reports.py
src/ui/: style.css
